--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,7 @@
 PORT=4000
 MONGODB_URI=mongodb+srv://gladex-membership:Ji2UoOAxAX2oWtks@gladex-membership.joelp.mongodb.net/gladex-membership?retryWrites=true&w=majority&appName=gladex-membership
 JWT_SECRET_KEY=91cefe90cf202cb91b4c9501c3a9361d6673c44834b4142218622
+
 FRONTEND_URL=http://localhost:5173
+FRONTEND_URL_PROD=https://gladex-membership-test-laqqvoq8g-richs-projects-b75b81f1.vercel.app
+CURRENT_ENV=development
