--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@ JWT_SECRET_KEY=91cefe90cf202cb91b4c9501c3a9361d6673c44834b4142218622
 
 FRONTEND_URL=http://localhost:5173
 FRONTEND_URL_PROD=https://gladex-membership-test.vercel.app
-CURRENT_ENV=development
+CURRENT_ENV=production
