--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,12 @@
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^5.3.0",
+    "react-qr-code": "^2.0.15",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.2",
     "sweetalert2": "^11.14.5",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
