--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.22.2",
     "axios": "^1.7.9",
+    "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
