--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "html5-qrcode": "^2.3.8",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-barcode": "^1.5.3",
     "react-dom": "^18.3.1",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^5.3.0",
